# controllers/index.js
@@ -2,17 +2,34 @@
 const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
 
-const getData = async (req, res) => {
-  const result = await mongodb.getDb().db('CSE341').collection('players').find();
+const getPlayerData = async (req, res) => {
+  const result = await mongodb.getDb().db('CSE341W5-8').collection('players').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists);
   });
 };
 
-const getObject = async (req, res) => {
+const getTeamData = async (req, res) => {
+  const result = await mongodb.getDb().db('CSE341W5-8').collection('teams').find();
+  result.toArray().then((lists) => {
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(lists);
+  });
+};
+
+const getPlayerObject = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const result = await mongodb.getDb().db('CSE341').collection('players').find({ _id: userId });
+  const result = await mongodb.getDb().db('CSE341W5-8').collection('players').find({ _id: userId });
+  result.toArray().then((lists) => {
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(lists[0]);
+  });
+};
+
+const getTeamObject = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  const result = await mongodb.getDb().db('CSE341W5-8').collection('teams').find({ _id: userId });
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists[0]);
@@ -29,11 +46,28 @@ const createPlayer = async (req, res) => {
     birthday: req.body.birthday,
     age: req.body.age
   };
-  const response = await mongodb.getDb().db('CSE341').collection('players').insertOne(player);
+  const response = await mongodb.getDb().db('CSE341W5-8').collection('players').insertOne(player);
   if (response.acknowledged) {
     res.status(201).json(response);
   } else {
     res.status(500).json(response.error || 'Error occurred while creating player.');
+  }
+  console.log(req.body)
+};
+
+const createTeam = async (req, res) => {
+  const player = {
+    teamName: req.body.teamName,
+    city: req.body.city,
+    conference: req.body.conference,
+    division: req.body.division,
+    coach: req.body.coach
+  };
+  const response = await mongodb.getDb().db('CSE341W5-8').collection('teams').insertOne(player);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res.status(500).json(response.error || 'Error occurred while creating team.');
   }
   console.log(req.body)
 };
@@ -49,7 +83,7 @@ const updatePlayer = async (req, res) => {
     birthday: req.body.birthday,
     age: req.body.age
   };
-  const response = await mongodb.getDb().db('CSE341').collection('players').replaceOne({ _id: userId }, player);
+  const response = await mongodb.getDb().db('CSE341W5-8').collection('players').replaceOne({ _id: userId }, player);
   if (response.modifiedCount > 0) {
     res.status(204).send();
   } else {
@@ -60,7 +94,7 @@ const updatePlayer = async (req, res) => {
 
 const deletePlayer = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const response = await mongodb.getDb().db('CSE341').collection('players').deleteOne({ _id: userId }, true);
+  const response = await mongodb.getDb().db('CSE341W5-8').collection('players').deleteOne({ _id: userId }, true);
   console.log(response);
   if (response.deletedCount > 0) {
     res.status(204).send();
@@ -69,4 +103,4 @@ const deletePlayer = async (req, res) => {
   }
 };
 
-module.exports = { getData, getObject, createPlayer, updatePlayer, deletePlayer };
+module.exports = { getPlayerData, getTeamData, getPlayerObject, getTeamObject, createPlayer, createTeam, updatePlayer, deletePlayer };
